<resources>
    <string name="app_name">Friendly community</string>
    <string name="count">0</string>
    <string name="countComment">478</string>
    <string name="countReply">100</string>
    <string name="geoCoordinatesGM">geo:%s</string>
    <string name="geoAddressGM">geo:?q=%s</string>
    <string name="ads">Реклама</string>
    <string name="request_internet_false">Данные с сети не получены</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="message_post_like">Ваш великолепный пост кому-то понравился.</string>
    <string name="big_message_post_like">
        Ваш великолепный пост кому-то понравился. \n\n
        Посмотри кто тобой интересуются.\n
        Возможно это твоя судьба.</string>
    <string name="singUp">Регистрация</string>
    <string name="signIn">Вход</string>
    <string name="toast_againOnBackPressed">Нажмите ещё раз, чтобы выйти.</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="goRegister">Зарегистрироваться</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loadNewPosts">Загрузить новые посты</string>
    <string name="loadMore">Загрузить ещё</string>
    <string name="contentPosts">Текст будущего поста</string>
    <string name="errorValidPassword">Пароль должен содержать минимум 6 символов, иметь хотя бы одну заглавную букву.
        Разрешены только английские символы и цифры.</string>
    <string name="errorEmptyEditText">Заполните поле</string>
    <string name="errorEqualsPassword">Пароли должны совпадать</string>
    <string name="publishPost">Пост опубликован.</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отмена</string>
    <string name="no_network_error">Нет интернет соединения</string>
    <string name="not_found">Ничего не найдено</string>
    <string name="error">Ошибка</string>
    <string name="google_play_unavailable">На устройстве не установлены сервесы Google</string>
</resources>
